--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Portfolio</title>
 </head>
 
-<body class="max-w-screen-2xl mx-auto p-2">
+<body class=" mx-auto ">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
